[gd_scene load_steps=12 format=3 uid="uid://7kbrpbhs038f"]

[ext_resource type="PackedScene" uid="uid://cxhdetyqj8r0p" path="res://Scenes/Maps/Testing Level.tscn" id="1_iukft"]
[ext_resource type="Script" uid="uid://docpccg8hlw8t" path="res://Scripts/Player/PlayerController.gd" id="2_gl6un"]
[ext_resource type="Script" uid="uid://cv7sn3bxvpx2p" path="res://Scripts/Player/Input State Machine/PlayerInputController.gd" id="3_j5yw3"]
[ext_resource type="Script" uid="uid://c0e6lo5fi7jfk" path="res://Scripts/Player/Input State Machine/Input Control States/WaitingForUnitSelection.gd" id="4_kldst"]
[ext_resource type="Script" uid="uid://clysu2ej4f7t2" path="res://Scripts/Player/Input State Machine/Input Control States/DirectingUnits.gd" id="5_b2bpf"]
[ext_resource type="Script" uid="uid://carff2xcksj1e" path="res://Scripts/Player/SelectionController.gd" id="6_7lihs"]
[ext_resource type="Script" uid="uid://drsqbr3gqaopc" path="res://Scripts/Player/Input State Machine/Input Control States/FindingSkillTarget.gd" id="6_71axn"]
[ext_resource type="Script" uid="uid://dkwyg8sbl73ui" path="res://Scripts/Player/SelectionBox.gd" id="7_fgofq"]
[ext_resource type="PackedScene" uid="uid://df8httx5hk1fy" path="res://Scenes/Player/Camera Controller.tscn" id="8_2irst"]
[ext_resource type="PackedScene" uid="uid://ct417dgr6r0gu" path="res://Scenes/UI/Player/HUD/Player HUD.tscn" id="9_bf53h"]
[ext_resource type="Script" uid="uid://thjq76fyvwel" path="res://Scripts/World/DeathListener.gd" id="11_dahhg"]

[node name="Game" type="Node"]

[node name="DeathListener" type="Node" parent="."]
script = ExtResource("11_dahhg")
metadata/_custom_type_script = "uid://thjq76fyvwel"

[node name="Testing Level" parent="." instance=ExtResource("1_iukft")]

[node name="PlayerController" type="Node" parent="."]
script = ExtResource("2_gl6un")
metadata/_custom_type_script = "uid://docpccg8hlw8t"

[node name="PlayerInputController" type="Node" parent="PlayerController" node_paths=PackedStringArray("selection_controller", "camera_controller")]
script = ExtResource("3_j5yw3")
selection_controller = NodePath("../SelectionController")
camera_controller = NodePath("../../Camera Controller")
initial_state = NodePath("WaitingForUnitSelection")
metadata/_custom_type_script = "uid://cv7sn3bxvpx2p"

[node name="WaitingForUnitSelection" type="Node" parent="PlayerController/PlayerInputController"]
script = ExtResource("4_kldst")
metadata/_custom_type_script = "uid://c0e6lo5fi7jfk"

[node name="DirectingUnits" type="Node" parent="PlayerController/PlayerInputController"]
script = ExtResource("5_b2bpf")
metadata/_custom_type_script = "uid://clysu2ej4f7t2"

[node name="FindingSkillTarget" type="Node" parent="PlayerController/PlayerInputController"]
script = ExtResource("6_71axn")
metadata/_custom_type_script = "uid://drsqbr3gqaopc"

[node name="SelectionController" type="Node" parent="PlayerController" node_paths=PackedStringArray("selection_box")]
script = ExtResource("6_7lihs")
selection_box = NodePath("../../Selection Box Canvas/SelectionBox")
metadata/_custom_type_script = "uid://carff2xcksj1e"

[node name="Camera Controller" parent="." instance=ExtResource("8_2irst")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 5)

[node name="Selection Box Canvas" type="CanvasLayer" parent="."]

[node name="SelectionBox" type="Control" parent="Selection Box Canvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("7_fgofq")
metadata/_custom_type_script = "uid://dkwyg8sbl73ui"

[node name="Player HUD" parent="." node_paths=PackedStringArray("_input_controller", "_selection_controller") instance=ExtResource("9_bf53h")]
_input_controller = NodePath("../PlayerController/PlayerInputController")
_selection_controller = NodePath("../PlayerController/SelectionController")
